# reglang2msl

./: .gitignore  LICENSE  README.md  pyproject.toml
src/reglang2msl/: __init__.py  __main__.py  _parser.py  exceptions.py  knowledge_base_translator.py  rule_translator.py  se.py  translator.py  type_inference.py  utils.py
src/reglang2msl/resources/: reglang.lark
tests/: conftest.py  test_knowledge_base_translator.py  test_msl_ast_serializer.py  test_parser.py  test_rule_translator.py  test_se.py  test_translator.py  test_type_inference.py
tests/reglang_examples/: example1.rl  example10.rl  example2.rl  example3.rl  example4.rl  example5.rl  example6.rl  example7.rl  example8.rl  example9.rl  example_5Line_1.rl  example_5Line_2.rl
